feat: added MinecraftUserInfo table + service to verify existence of mc-account